--- a/html/package.json
+++ b/html/package.json
@@ -46,6 +46,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@types/css-font-loading-module": "^0.0.4",
     "decko": "^1.2.0",
     "file-saver": "^2.0.5",
     "preact": "^10.5.14",
